# speakeasy

./: .gitignore  ARCHITECTURE.md  COPYING  DEVELOPMENT.md  Makefile  README.md  ai.js  aiNoop.js  controller.js  errorClassifier.js  eslint.config.js  extension.js  fileTranscribe.js  gtk-app.js  keybinding.js  metadata.json  ollama.js  openrouter.js  output.js  prefs.js  recorder.js  recoveryCleanup.js  sessionLog.js  stt-subprocess.js  stylesheet.css  testRecording.js  transcriptStore.js  utils.js  warm-cache.py
core/: Cargo.toml
core/src/: ai.rs  ai_local.rs  ai_worker.rs  audio_writer.rs  lib.rs  main.rs  tui.rs
prompts/: framing.txt  system.txt
schemas/: gschemas.compiled  org.gnome.shell.extensions.speakeasy.gschema.xml
tests/: test-ai-integration.js  test-ai.js  test-controller.js  test-error-classifier.js  test-file-transcribe.js  test-keybinding.js  test-ollama.js  test-path-prompt-dialog.js  test-recorder-init.js  test-recorder-watchdog.js  test-recorder.js  test-recovery-cleanup.js  test-session-log.js  test-test-recording.js  test-transcript-store.js
tools/: test-ai-cleanup.sh  test-audio-recording.sh  test-stt.sh  transcribe-file.js
ui/: panelIcon.js  pathPromptDialog.js  pathValidation.js  recordingOverlay.js  recoveryDialog.js  transcriptDialog.js  transcriptHistoryWindow.js
