[package]
name = "speakeasy-core"
version = "0.1.0"
edition = "2021"

[dependencies]
cpal = "0.15"
nnnoiseless = "0.5"
whisper-rs = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
hound = "3.5"
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"